rust/mlt-java/src/main/java/org/maplibre/mlt/encoder/ffi/mlt_ffi_h.java


  private static class MltLayerEncoder_new {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.of(
            MltLayerEncoder_new_result.layout(), DiplomatStringView.layout(), mlt_ffi_h.C_INT);

    public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("MltLayerEncoder_new");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * MltLayerEncoder_new_result MltLayerEncoder_new(DiplomatStringView name, uint32_t extent)
   * }
   */
  public static FunctionDescriptor MltLayerEncoder_new$descriptor() {
    return MltLayerEncoder_new.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * MltLayerEncoder_new_result MltLayerEncoder_new(DiplomatStringView name, uint32_t extent)
   * }
   */
  public static MethodHandle MltLayerEncoder_new$handle() {
    return MltLayerEncoder_new.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * MltLayerEncoder_new_result MltLayerEncoder_new(DiplomatStringView name, uint32_t extent)
   * }
   */
  public static MemorySegment MltLayerEncoder_new$address() {
    return MltLayerEncoder_new.ADDR;
  }

  /**
   * {@snippet lang=c :
   * MltLayerEncoder_new_result MltLayerEncoder_new(DiplomatStringView name, uint32_t extent)
   * }
   */
  public static MemorySegment MltLayerEncoder_new(
      SegmentAllocator allocator, MemorySegment name, int extent) {
    var mh$ = MltLayerEncoder_new.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltLayerEncoder_new", allocator, name, extent);
      }
      return (MemorySegment) mh$.invokeExact(allocator, name, extent);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltLayerEncoder_set_ids {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.of(
            MltLayerEncoder_set_ids_result.layout(),
            mlt_ffi_h.C_POINTER,
            DiplomatU64View.layout(),
            DiplomatBoolView.layout());

    public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("MltLayerEncoder_set_ids");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * MltLayerEncoder_set_ids_result MltLayerEncoder_set_ids(MltLayerEncoder *self, DiplomatU64View ids, DiplomatBoolView present)
   * }
   */
  public static FunctionDescriptor MltLayerEncoder_set_ids$descriptor() {
    return MltLayerEncoder_set_ids.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * MltLayerEncoder_set_ids_result MltLayerEncoder_set_ids(MltLayerEncoder *self, DiplomatU64View ids, DiplomatBoolView present)
   * }
   */
  public static MethodHandle MltLayerEncoder_set_ids$handle() {
    return MltLayerEncoder_set_ids.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * MltLayerEncoder_set_ids_result MltLayerEncoder_set_ids(MltLayerEncoder *self, DiplomatU64View ids, DiplomatBoolView present)
   * }
   */
  public static MemorySegment MltLayerEncoder_set_ids$address() {
    return MltLayerEncoder_set_ids.ADDR;
  }

  /**
   * {@snippet lang=c :
   * MltLayerEncoder_set_ids_result MltLayerEncoder_set_ids(MltLayerEncoder *self, DiplomatU64View ids, DiplomatBoolView present)
   * }
   */
  public static MemorySegment MltLayerEncoder_set_ids(
      SegmentAllocator allocator, MemorySegment self, MemorySegment ids, MemorySegment present) {
    var mh$ = MltLayerEncoder_set_ids.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltLayerEncoder_set_ids", allocator, self, ids, present);
      }
      return (MemorySegment) mh$.invokeExact(allocator, self, ids, present);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltLayerEncoder_set_geometries {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.of(
            MltLayerEncoder_set_geometries_result.layout(),
            mlt_ffi_h.C_POINTER,
            DiplomatI32View.layout(),
            DiplomatU32View.layout());

    public static final MemorySegment ADDR =
        SYMBOL_LOOKUP.findOrThrow("MltLayerEncoder_set_geometries");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * MltLayerEncoder_set_geometries_result MltLayerEncoder_set_geometries(MltLayerEncoder *self, DiplomatI32View coords, DiplomatU32View meta)
   * }
   */
  public static FunctionDescriptor MltLayerEncoder_set_geometries$descriptor() {
    return MltLayerEncoder_set_geometries.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * MltLayerEncoder_set_geometries_result MltLayerEncoder_set_geometries(MltLayerEncoder *self, DiplomatI32View coords, DiplomatU32View meta)
   * }
   */
  public static MethodHandle MltLayerEncoder_set_geometries$handle() {
    return MltLayerEncoder_set_geometries.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * MltLayerEncoder_set_geometries_result MltLayerEncoder_set_geometries(MltLayerEncoder *self, DiplomatI32View coords, DiplomatU32View meta)
   * }
   */
  public static MemorySegment MltLayerEncoder_set_geometries$address() {
    return MltLayerEncoder_set_geometries.ADDR;
  }

  /**
   * {@snippet lang=c :
   * MltLayerEncoder_set_geometries_result MltLayerEncoder_set_geometries(MltLayerEncoder *self, DiplomatI32View coords, DiplomatU32View meta)
   * }
   */
  public static MemorySegment MltLayerEncoder_set_geometries(
      SegmentAllocator allocator, MemorySegment self, MemorySegment coords, MemorySegment meta) {
    var mh$ = MltLayerEncoder_set_geometries.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall("MltLayerEncoder_set_geometries", allocator, self, coords, meta);
      }
      return (MemorySegment) mh$.invokeExact(allocator, self, coords, meta);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltLayerEncoder_add_column {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.of(
            MltLayerEncoder_add_column_result.layout(),
            mlt_ffi_h.C_POINTER,
            DiplomatStringView.layout(),
            mlt_ffi_h.C_INT,
            DiplomatU8View.layout(),
            mlt_ffi_h.C_INT,
            DiplomatBoolView.layout());

    public static final MemorySegment ADDR =
        SYMBOL_LOOKUP.findOrThrow("MltLayerEncoder_add_column");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * MltLayerEncoder_add_column_result MltLayerEncoder_add_column(MltLayerEncoder *self, DiplomatStringView name, MltColumnType column_type, DiplomatU8View data, uint32_t count, DiplomatBoolView present)
   * }
   */
  public static FunctionDescriptor MltLayerEncoder_add_column$descriptor() {
    return MltLayerEncoder_add_column.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * MltLayerEncoder_add_column_result MltLayerEncoder_add_column(MltLayerEncoder *self, DiplomatStringView name, MltColumnType column_type, DiplomatU8View data, uint32_t count, DiplomatBoolView present)
   * }
   */
  public static MethodHandle MltLayerEncoder_add_column$handle() {
    return MltLayerEncoder_add_column.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * MltLayerEncoder_add_column_result MltLayerEncoder_add_column(MltLayerEncoder *self, DiplomatStringView name, MltColumnType column_type, DiplomatU8View data, uint32_t count, DiplomatBoolView present)
   * }
   */
  public static MemorySegment MltLayerEncoder_add_column$address() {
    return MltLayerEncoder_add_column.ADDR;
  }

  /**
   * {@snippet lang=c :
   * MltLayerEncoder_add_column_result MltLayerEncoder_add_column(MltLayerEncoder *self, DiplomatStringView name, MltColumnType column_type, DiplomatU8View data, uint32_t count, DiplomatBoolView present)
   * }
   */
  public static MemorySegment MltLayerEncoder_add_column(
      SegmentAllocator allocator,
      MemorySegment self,
      MemorySegment name,
      int column_type,
      MemorySegment data,
      int count,
      MemorySegment present) {
    var mh$ = MltLayerEncoder_add_column.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall(
            "MltLayerEncoder_add_column", allocator, self, name, column_type, data, count, present);
      }
      return (MemorySegment)
          mh$.invokeExact(allocator, self, name, column_type, data, count, present);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }

  private static class MltLayerEncoder_add_string_column {
    public static final FunctionDescriptor DESC =
        FunctionDescriptor.of(
            MltLayerEncoder_add_string_column_result.layout(),
            mlt_ffi_h.C_POINTER,
            DiplomatStringView.layout(),
            DiplomatStringView.layout(),
            DiplomatU32View.layout(),
            DiplomatBoolView.layout());

    public static final MemorySegment ADDR =
        SYMBOL_LOOKUP.findOrThrow("MltLayerEncoder_add_string_column");

    public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
  }

  /**
   * Function descriptor for:
   * {@snippet lang=c :
   * MltLayerEncoder_add_string_column_result MltLayerEncoder_add_string_column(MltLayerEncoder *self, DiplomatStringView name, DiplomatStringView data, DiplomatU32View offsets, DiplomatBoolView present)
   * }
   */
  public static FunctionDescriptor MltLayerEncoder_add_string_column$descriptor() {
    return MltLayerEncoder_add_string_column.DESC;
  }

  /**
   * Downcall method handle for:
   * {@snippet lang=c :
   * MltLayerEncoder_add_string_column_result MltLayerEncoder_add_string_column(MltLayerEncoder *self, DiplomatStringView name, DiplomatStringView data, DiplomatU32View offsets, DiplomatBoolView present)
   * }
   */
  public static MethodHandle MltLayerEncoder_add_string_column$handle() {
    return MltLayerEncoder_add_string_column.HANDLE;
  }

  /**
   * Address for:
   * {@snippet lang=c :
   * MltLayerEncoder_add_string_column_result MltLayerEncoder_add_string_column(MltLayerEncoder *self, DiplomatStringView name, DiplomatStringView data, DiplomatU32View offsets, DiplomatBoolView present)
   * }
   */
  public static MemorySegment MltLayerEncoder_add_string_column$address() {
    return MltLayerEncoder_add_string_column.ADDR;
  }

  /**
   * {@snippet lang=c :
   * MltLayerEncoder_add_string_column_result MltLayerEncoder_add_string_column(MltLayerEncoder *self, DiplomatStringView name, DiplomatStringView data, DiplomatU32View offsets, DiplomatBoolView present)
   * }
   */
  public static MemorySegment MltLayerEncoder_add_string_column(
      SegmentAllocator allocator,
      MemorySegment self,
      MemorySegment name,
      MemorySegment data,
      MemorySegment offsets,
      MemorySegment present) {
    var mh$ = MltLayerEncoder_add_string_column.HANDLE;
    try {
      if (TRACE_DOWNCALLS) {
        traceDowncall(
            "MltLayerEncoder_add_string_column", allocator, self, name, data, offsets, present);
      }
      return (MemorySegment) mh$.invokeExact(allocator, self, name, data, offsets, present);
    } catch (Error | RuntimeException ex) {
      throw ex;
    } catch (Throwable ex$) {
      throw new AssertionError("should not reach here", ex$);
    }
  }
